test/expected/explain_tli-c99.out
explain thread_local int x
        ^
9: error: "thread_local": unsupported keyword in C
